--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -46,7 +46,8 @@
     "privacy.third-parties.title": "Integroidut kolmannet osapuolet:",
     "privacy.third-parties.policy": "Lue tietosuojakäytäntö",
     "privacy.third-parties.host": "Tätä verkkosivustoa isännöi",
-    "privacy.third-parties.db": "Tykkäyksesi ja anonymisoidun IP-osoitteesi tallentaa",
+    "privacy.third-parties.permdb": "Tykkääjät ja anonymisoidun IP-osoitteesi tallennetaan",
+    "privacy.third-parties.tmpdb": "Anonymisoitu IP-osoitteesi väliaikaisesti tallennetaan",
     "privacy.third-parties.emails": "Sähköpostit käsittelee",
     "privacy.third-parties.messages": "Viestisi tallennetaan",
     "privacy.third-parties.maps": "Karttarenderöijän ja laatat toimittaa",
