--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -46,7 +46,8 @@
     "privacy.third-parties.title": " Tiers intégrés :",
     "privacy.third-parties.policy": "Lire la politique de confidentialité",
     "privacy.third-parties.host": "Ce site web est hébergé chez",
-    "privacy.third-parties.db": "Tes applaudissements et ton adresse IP anonymisée sont stockés chez",
+    "privacy.third-parties.permdb": "Tes applaudissements et ton adresse IP anonymisée sont stockés chez",
+    "privacy.third-parties.tmpdb": "Ton adresse IP anonymisée est temporairement stockés chez",
     "privacy.third-parties.emails": "Les couriels sont traités par",
     "privacy.third-parties.messages": "Les messages sont stoqués chez",
     "privacy.third-parties.maps": "Le moteur de rendu des cartes et les tuiles sont fournis par",
