--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -84,6 +84,8 @@
     "not-found.action": "Visit the main page",
     "photo.title": "Photography",
     "photo.open-story.tooltip": "Read the story",
+    "stories-overview": "Stories overview",
+    "stories.title": "All Published Stories",
     "photo.open-story.pre-title": "From the story:",
     "story.title": "The Story Behind the Photography",
     "story.open-photo.tooltip": "See the photography",
