--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -84,6 +84,8 @@
     "not-found.action": "Käy pääsivulla",
     "photo.title": "Valokuvaus",
     "photo.open-story.tooltip": "Lue tarina",
+    "stories-overview": "Tarinoiden yleiskatsaus",
+    "stories.title": "Kaikki julkaistut tarinat",
     "photo.open-story.pre-title": "Tarinasta:",
     "story.title": "Tarina valokuvauksen takana",
     "story.open-photo.tooltip": "Katso valokuvaus",
