--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -84,6 +84,8 @@
     "not-found.action": "Visites la page principale",
     "photo.title": "Photographie",
     "photo.open-story.tooltip": "Lire l'aventure",
+    "stories-overview": "Aperçu des aventures",
+    "stories.title": "Toutes les aventures publiées",
     "photo.open-story.pre-title": "De l'aventure :",
     "story.title": "L'aventure de la photographie",
     "story.open-photo.tooltip": "Voir la photographie",
