--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -109,7 +109,12 @@
     "map.stats.gain": "Gain:",
     "map.stats.loss": "Loss:",
     "map.stats.source": "Data source:",
-    "map.stats.source.pos": "Position: single-band GNSS (GPS + GLONASS) + topo maps",
+    "map.stats.source.pos": "Position:",
+    "single-band": "single-band",
+    "multi-band": "multi-band",
+    "single-gnss": "GPS only",
+    "multi-gnss": "multi-GNSS",
+    "topo-maps": "topo maps",
     "map.stats.chart.ele.label": "{{elevation}} (m)",
     "map.stats.chart.ele.tooltip": "{{elevation}}:",
     "map.stats.chart.dist.label": "{{distance}} (km)",
