--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -109,7 +109,12 @@
     "map.stats.gain": "positif :",
     "map.stats.loss": "négatif :",
     "map.stats.source": "Sources d'informations :",
-    "map.stats.source.pos": "Position : simple-bande GNSS (GPS + GLONASS) + cartes topographiques",
+    "map.stats.source.pos": "Position :",
+    "single-band": "simple-bande",
+    "multi-band": "multi-bande",
+    "single-gnss": "GPS seul",
+    "multi-gnss": "multi-GNSS",
+    "topo-maps": "cartes topographiques",
     "map.stats.chart.ele.label": "{{elevation}} (m)",
     "map.stats.chart.ele.tooltip": "{{elevation}} :",
     "map.stats.chart.dist.label": "{{distance}} (km)",
