--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -109,7 +109,12 @@
     "map.stats.gain": "Voitto:",
     "map.stats.loss": "Tappio:",
     "map.stats.source": "Tietolähde:",
-    "map.stats.source.pos": "Asema: yksikaistainen GNSS (GPS + GLONASS) + topokartat",
+    "map.stats.source.pos": "Asema:",
+    "single-band": "yksikaistainen",
+    "multi-band": "monikaistainen",
+    "single-gnss": "Vain GPS",
+    "multi-gnss": "moni GNSS",
+    "topo-maps": "topokartat",
     "map.stats.chart.ele.label": "{{elevation}} (m)",
     "map.stats.chart.ele.tooltip": "{{elevation}}:",
     "map.stats.chart.dist.tooltip": "{{distance}}:",
