Improve UX on GIF selection

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -79,6 +79,7 @@
     "applause.feedback.pass": "Thank you so much for your feedback, I appreciate! 😊",
     "applause.feedback.fail": "Sorry, Something went wrong! \uD83D\uDE15 Try again later.",
     "applause.feedback.fail.429": "Sorry, I couldn't handle so much jubilation! 😱 Try again later.",
+    "no-result-try-sth-else": "No result, please try something else.",
     "back-to-photo.tooltip": "Back to the photography or story",
     "not-found.message": "Got lost?",
     "not-found.action": "Visit the main page",
