Friendly Captcha integration

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -16,6 +16,7 @@
     "invalid-email": "Check your email!",
     "invalid-message": "Say something!",
     "too-many-requests": "Too many requests!",
+    "is-bot": "Are you human? \uD83E\uDD16",
     "wait": "Wait a sec",
     "wait-minute": "Wait a minute",
     "thanks": "Thanks!",
@@ -54,6 +55,7 @@
     "privacy.third-parties.bugs": "Bugs are collected by",
     "privacy.third-parties.cdn": "Some scripts are delivered by",
     "privacy.third-parties.gif": "Funny animations are delivered by",
+    "privacy.third-parties.captcha": "Spam and abuse protection by",
     "privacy.contact": "Should you need more enlightenment, please feel free to use the contact form.",
     "social-networks": "Social Networks",
     "visitors-book": "Visitors' Book",
