--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -16,6 +16,7 @@
     "invalid-email": "Tarkista email!",
     "invalid-message": "Sano jotain!",
     "too-many-requests": "Liian monta pyyntöä!",
+    "is-bot": "Oletko ihminen? \uD83E\uDD16",
     "wait": "Odota",
     "wait-minute": "Odota hetki",
     "thanks": "Kiitos!",
@@ -54,6 +55,7 @@
     "privacy.third-parties.bugs": "Vikoja kerää",
     "privacy.third-parties.cdn": "Jotkin skriptit toimittaa",
     "privacy.third-parties.gif": "Hauskoja animaatioita toimittaa",
+    "privacy.third-parties.captcha": "Roskapostin ja väärinkäytön suojattu",
     "privacy.contact": "Jos tarvitset lisävalaistusta, käytä yhteydenottolomaketta.",
     "social-networks": "Sosiaaliset verkostot",
     "visitors-book": "Vieraskirja",
