--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -16,6 +16,7 @@
     "invalid-email": "Vérifies ton couriel !",
     "invalid-message": "Dis quelque chose !",
     "too-many-requests": "Trop de demandes !",
+    "is-bot": "Es-tu humain ? \uD83E\uDD16",
     "wait": "Minute papillon",
     "wait-minute": "Minute bonhomme",
     "thanks": "Merci !",
@@ -54,6 +55,7 @@
     "privacy.third-parties.bugs": "Les bogues sont collectés par",
     "privacy.third-parties.cdn": "Certains scripts sont fournis par",
     "privacy.third-parties.gif": "Les chouettes animations sont fournis par",
+    "privacy.third-parties.captcha": "Protection contre le spam et les abus par",
     "privacy.contact": "Si t'as besoin de plus d'informations, n'hésites pas à utiliser le formulaire de contact.",
     "social-networks": "Réseaux sociaux",
     "visitors-book": "Livre d'or",
