--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -30,8 +30,8 @@
     "copyright.content": "The website content is licensed under",
     "copyright.source": "The website source code is licensed under",
     "copyright.third-parties.link": "others",
-    "copyright.third-parties.title": "Third Party Libraries & Files",
-    "copyright.third-parties.details": "This website includes the following libraries, fonts and images.",
+    "copyright.third-parties.title": "Third Party Licensed Content",
+    "copyright.third-parties.details": "This website includes the following images.",
     "copyright.third-parties.project": "Project",
     "copyright.third-parties.license": "License",
     "copyright.third-parties.icon": "Icon",
@@ -43,7 +43,7 @@
     "status.notice": "Before reporting a bug, you could check the current network status.",
     "status.link": "Visit the status page",
     "privacy.title": "Privacy Matters",
-    "privacy.overview": "No one tracker, no one ad, no bullshit! I do not use cookies or trackers and do not record your personally identifiable information unless you give a feedback or subscribe to the newsletter. In doing so personal data is voluntarily transferred to me, stored automatically and only used for the purpose of appreciating your interest, dealing with your request and getting in contact with you. I also save your IP address permanently when you applause me, and temporarily when you contact me, subscribe to or unsubscribe from the newsletter. I use it to automatically block repetitive requests, and save it in hashed and encrypted form. Notice that I rely on third party solutions that may collect your personally identifiable information. Please read their policies for further information.",
+    "privacy.overview": "No one tracker, no one ad, no bullshit! I do not use cookies or trackers and do not record your personally identifiable information unless you give a feedback or subscribe to the newsletter. In doing so personal data is voluntarily transferred to me, stored automagically and only used for the purpose of appreciating your interest, dealing with your request and getting in contact with you. I also save your IP address permanently when you applause me, and temporarily when you contact me, subscribe to or unsubscribe from the newsletter. I use it to automatically block repetitive requests, and save it in hashed and encrypted form. Notice that I rely on third party solutions that may collect your personally identifiable information. Please read their policies for further information.",
     "privacy.third-parties.title": "Integrated Third Parties:",
     "privacy.third-parties.policy": "Read the privacy policy",
     "privacy.third-parties.host": "This website is hosted by",
