--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -30,8 +30,8 @@
     "copyright.content": "Sivuston sisältö on saatavilla",
     "copyright.source": "Sivuston lähdekoodi on saatavilla",
     "copyright.third-parties.link": "muut",
-    "copyright.third-parties.title": "Kolmannen osapuolen kirjastot ja tiedostot",
-    "copyright.third-parties.details": "Tämä verkkosivusto sisältää seuraavia kirjastoja, fontteja ja kuvia.",
+    "copyright.third-parties.title": "Kolmannen osapuolen lisensoitu sisältö",
+    "copyright.third-parties.details": "Tämä sivusto sisältää seuraavat kuvat.",
     "copyright.third-parties.project": "Hanke",
     "copyright.third-parties.license": "Lisenssi",
     "copyright.third-parties.icon": "Icon",
