--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -30,8 +30,8 @@
     "copyright.content": "Le contenu est sous licence",
     "copyright.source": "Le code source est sous licence",
     "copyright.third-parties.link": "autres",
-    "copyright.third-parties.title": "Bibliothèques et fichiers tiers",
-    "copyright.third-parties.details": "Ce site web comprend les bibliothèques, polices et images suivantes :",
+    "copyright.third-parties.title": "Contenu tiers",
+    "copyright.third-parties.details": "Ce site web comprend les images suivantes :",
     "copyright.third-parties.project": "Projet",
     "copyright.third-parties.license": "Licence",
     "copyright.third-parties.icon": "Icône",
