More modern style

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -27,8 +27,8 @@
     "support": "Support",
     "support.why": "Do you like my website? So feel free to share it to your friends! Also, your support is highly appreciated and motivates me to continue sharing more and higher quality content. Your donation would help me to pay the domain name and the coffee amplifying my creativity. The donation platform is Ko-fi, which is designed to support artists with one-off donations. The minimum amount is worth an espresso: 3€. The payment is handled and secured by PayPal. You could use my PayPal link directly.",
     "copyright.title": "Copyright",
-    "copyright.content": "The website content is licensed under",
-    "copyright.source": "The website source code is licensed under",
+    "copyright.content": "The content is licensed under",
+    "copyright.source": "The source code is licensed under",
     "copyright.third-parties.link": "others",
     "copyright.third-parties.title": "Third Party Licensed Content",
     "copyright.third-parties.details": "This website includes the following images.",
