--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -38,6 +38,7 @@
     "copyright.third-parties.icon.creator": "Made by",
     "copyright.third-parties.icon.distributor": "from",
     "copyright.third-parties.from": "From",
+    "copyright.third-parties.ionicons": "Other icons: ",
     "font": "Font",
     "status.title": "Status Page",
     "status.notice": "Before reporting a bug, you could check the current network status.",
