--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -38,6 +38,7 @@
     "copyright.third-parties.icon.creator": "Valmistanut",
     "copyright.third-parties.icon.distributor": "osoitteesta",
     "copyright.third-parties.from": "Osoitteesta",
+    "copyright.third-parties.ionicons": "Muut kuvakkeet: ",
     "font": "Fontti",
     "status.title": "Tilasivu",
     "status.notice": "Ennen vikailmoituksen tekemistä voit tarkistaa verkon nykyisen tilan.",
