--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -38,6 +38,7 @@
     "copyright.third-parties.icon.creator": "Réalisé par",
     "copyright.third-parties.icon.distributor": "et distribué par",
     "copyright.third-parties.from": "Source",
+    "copyright.third-parties.ionicons": "Autres icônes : ",
     "font": "Police",
     "status.title": "Page d'état",
     "status.notice": "Avant de signaler un bogue, tu peux vérifier l'état actuel du réseau.",
