--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -20,8 +20,8 @@
     "wait": "Wait a sec",
     "wait-minute": "Wait a minute",
     "thanks": "Thanks!",
-    "newsletter": "Newsletter",
-    "newsletter.notice": "I sent out an email only when I create something new. You can unsubscribe any time.",
+    "newsletter": "Follow My Journey",
+    "newsletter.notice": "I sent out an email no more than four times a year. You can unsubscribe any time.",
     "subscribe": "Subscribe",
     "unsubscribe": "Unsubscribe",
     "support": "Support",
