--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -8,20 +8,20 @@
     "contact.title": "Sinusta",
     "contact.why": "Anna minulle palautetta, jaa ajatuksiasi ja projektejasi, kerro lisää itsestäsi.",
     "name": "Nimi:",
-    "email": "Email:",
+    "email": "Sähköpostiosoite:",
     "message": "Viesti:",
     "report-bug": "Ilmoita vikaestä",
     "read-privacy": "Lue tietosuojakäytäntö",
     "send": "Lähetä",
-    "invalid-email": "Tarkista email!",
+    "invalid-email": "Virheellinen sähköpostiosoite!",
     "invalid-message": "Sano jotain!",
     "too-many-requests": "Liian monta pyyntöä!",
     "is-bot": "Oletko ihminen? \uD83E\uDD16",
     "wait": "Odota",
     "wait-minute": "Odota hetki",
     "thanks": "Kiitos!",
-    "newsletter": "Uutiskirje",
-    "newsletter.notice": "Lähetän sähköpostia vain silloin, kun luon jotain uutta. Voit peruuttaa tilauksen milloin tahansa.",
+    "newsletter": "Seuraa matkaani",
+    "newsletter.notice": "Lähetin sähköpostia enintään neljä kertaa vuodessa. Voit peruuttaa tilauksen milloin tahansa.",
     "subscribe": "Tilaa",
     "unsubscribe": "Peruuttaa tilauksen",
     "support": "Tuki",
