--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -20,8 +20,8 @@
     "wait": "Minute papillon",
     "wait-minute": "Minute bonhomme",
     "thanks": "Merci !",
-    "newsletter": "Nouvelles",
-    "newsletter.notice": "J'envoie un couriel uniquement quand y'a du neuf. Tu peux te désabonner à tout moment.",
+    "newsletter": "Des Nouvelles !",
+    "newsletter.notice": "Je n'envoie pas plus de quatre couriels par an. Tu peux te désabonner à tout moment.",
     "subscribe": "S'abonner",
     "unsubscribe": "Se désabonner",
     "support": "Me soutenir",
