Email format and feedback

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -13,7 +13,7 @@
     "report-bug": "Signaler un bogue",
     "read-privacy": "Lire la politique de confidentialité",
     "send": "Envoyer",
-    "invalid-email": "Vérifies ton couriel !",
+    "invalid-email": "Adresse courriel invalide !",
     "invalid-message": "Dis quelque chose !",
     "too-many-requests": "Trop de demandes !",
     "is-bot": "Es-tu humain ? \uD83E\uDD16",
