--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -13,7 +13,7 @@
     "report-bug": "Report a bug",
     "read-privacy": "Read the Privacy Policy",
     "send": "Send",
-    "invalid-email": "Check your email!",
+    "invalid-email": "Invalid email address!",
     "invalid-message": "Say something!",
     "too-many-requests": "Too many requests!",
     "is-bot": "Are you human? \uD83E\uDD16",
