Bye-bye "Like" button

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -44,11 +44,10 @@
     "status.notice": "Before reporting a bug, you could check the current network status.",
     "status.link": "Visit the status page",
     "privacy.title": "Privacy Matters",
-    "privacy.overview": "No one tracker, no one ad, no bullshit! I do not use cookies or trackers and do not record your personally identifiable information unless you give a feedback or subscribe to the newsletter. In doing so personal data is voluntarily transferred to me, stored automagically and only used for the purpose of appreciating your interest, dealing with your request and getting in contact with you. I also save your IP address permanently when you applause me, and temporarily when you contact me, subscribe to or unsubscribe from the newsletter. I use it to automatically block repetitive requests, and save it in hashed and encrypted form. Notice that I rely on third party solutions that may collect your personally identifiable information. Please read their policies for further information.",
+    "privacy.overview": "No one tracker, no one ad, no bullshit! I do not use cookies or trackers and do not record your personally identifiable information unless you give a feedback or subscribe to the newsletter. In doing so personal data is voluntarily transferred to me, stored automagically and only used for the purpose of appreciating your interest, dealing with your request and getting in contact with you. I also save your IP address temporarily when you contact me, subscribe to or unsubscribe from the newsletter. I use it to automatically block repetitive requests, and save it in hashed and encrypted form. Notice that I rely on third party solutions that may collect your personally identifiable information. Please read their policies for further information.",
     "privacy.third-parties.title": "Integrated Third Parties:",
     "privacy.third-parties.policy": "Read the privacy policy",
     "privacy.third-parties.host": "This website is hosted by",
-    "privacy.third-parties.permdb": "Your likes and anonymized IP address are stored by",
     "privacy.third-parties.tmpdb": "Your anonymized IP address is temporarily stored by",
     "privacy.third-parties.emails": "Emails are handled by",
     "privacy.third-parties.messages": "Your messages are stored by",
@@ -76,9 +75,6 @@
     "last.tooltip": "The very first shot",
     "previous.tooltip": "Previous",
     "loading.tooltip": "Loading",
-    "applause.me": "Applause me for this",
-    "applause.photo.tooltip": "{{applause.me}} photography!",
-    "applause.story.tooltip": "{{applause.me}} story!",
     "applause.feedback.pass": "Thank you so much for your feedback, I appreciate! 😊",
     "applause.feedback.fail": "Sorry, Something went wrong! \uD83D\uDE15 Try again later.",
     "applause.feedback.fail.429": "Sorry, I couldn't handle so much jubilation! 😱 Try again later.",
