--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -44,11 +44,10 @@
     "status.notice": "Ennen vikailmoituksen tekemistä voit tarkistaa verkon nykyisen tilan.",
     "status.link": "Käy tilasivulla",
     "privacy.title": "Yksityisyys on tärkeää",
-    "privacy.overview": "Ei yhtään jäljittäjää, ei yhtään mainosta, ei paskapuhetta! En käytä evästeitä tai seurantalaitteita enkä tallenna henkilökohtaisesti tunnistettavia tietojasi, ellet anna palautetta tai tilaa uutiskirjettä. Tällöin henkilötiedot siirretään minulle vapaaehtoisesti, tallennetaan automaattisesti ja niitä käytetään ainoastaan kiinnostuksesi arvostamiseen, pyyntösi käsittelyyn ja yhteydenpitoon. Tallennan myös IP-osoitteesi pysyvästi, kun osoitat minulle suosiota, ja väliaikaisesti, kun otat minuun yhteyttä, tilaat uutiskirjeen tai peruutat sen. Käytän sitä toistuvien pyyntöjen automaattiseen estämiseen ja tallennan sen hashed- ja salatussa muodossa. Huomaa, että luotan kolmansien osapuolten ratkaisuihin, jotka saattavat kerätä henkilötietojasi. Tutustu niiden käytäntöihin saadaksesi lisätietoja.",
+    "privacy.overview": "Ei yhtään jäljittäjää, ei yhtään mainosta, ei paskapuhetta! En käytä evästeitä tai seurantalaitteita enkä tallenna henkilökohtaisesti tunnistettavia tietojasi, ellet anna palautetta tai tilaa uutiskirjettä. Tällöin henkilötiedot siirretään minulle vapaaehtoisesti, tallennetaan automaattisesti ja niitä käytetään ainoastaan kiinnostuksesi arvostamiseen, pyyntösi käsittelyyn ja yhteydenpitoon. Tallennan IP-osoitteesi väliaikaisesti, kun otat minuun yhteyttä, tilaat uutiskirjeen tai peruutat sen. Käytän sitä toistuvien pyyntöjen automaattiseen estämiseen ja tallennan sen hashed- ja salatussa muodossa. Huomaa, että luotan kolmansien osapuolten ratkaisuihin, jotka saattavat kerätä henkilötietojasi. Tutustu niiden käytäntöihin saadaksesi lisätietoja.",
     "privacy.third-parties.title": "Integroidut kolmannet osapuolet:",
     "privacy.third-parties.policy": "Lue tietosuojakäytäntö",
     "privacy.third-parties.host": "Tätä verkkosivustoa isännöi",
-    "privacy.third-parties.permdb": "Tykkääjät ja anonymisoidun IP-osoitteesi tallennetaan",
     "privacy.third-parties.tmpdb": "Anonymisoitu IP-osoitteesi väliaikaisesti tallennetaan",
     "privacy.third-parties.emails": "Sähköpostit käsittelee",
     "privacy.third-parties.messages": "Viestisi tallennetaan",
@@ -76,9 +75,6 @@
     "last.tooltip": "Ensimmäinen valokuvaus",
     "previous.tooltip": "Edellinen",
     "loading.tooltip": "Kuormaus",
-    "applause.me": "Taputtakaa minulle tästä",
-    "applause.photo.tooltip": "{{applause.me}} valokuvauksesta!",
-    "applause.story.tooltip": "{{applause.me}} tarinasta!",
     "applause.feedback.pass": "Kiitos paljon palautteestasi, arvostan! 😊",
     "applause.feedback.fail": "Anteeksi, jokin meni pieleen! \uD83D\uDE15 Kokeile myöhemmin uudelleen.",
     "applause.feedback.fail.429": "Anteeksi, en pystynyt käsittelemään niin paljon riemua! 😱 Kokeile myöhemmin uudelleen.",
