--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -44,11 +44,10 @@
     "status.notice": "Avant de signaler un bogue, tu peux vérifier l'état actuel du réseau.",
     "status.link": "Visiter la page d'état",
     "privacy.title": "La vie privée compte",
-    "privacy.overview": "Pas un tracker, pas une pub, elle est pas belle la vie !? je n'utilise pas de cookies ou de trackers et n'enregistre pas tes informations personnelles identifiables, sauf si tu donnes ton avis ou si tu t'abonnes aux nouvelles. Dans ce cas, les données personnelles me sont transmises volontairement, sont stockées automatiquement et ne sont utilisées que dans le but d'apprécier ton intérêt, de traiter ta demande et de prendre contact avec toi. Je sauvegarde également ton adresse IP de manière permanente lorsque tu m'applaudis, et de manière temporaire lorsque tu me contactes, tu t'abonnes ou te désabonnes des nouvelles. Je l'utilise pour bloquer automatiquement les demandes répétitives, et je l'enregistre sous forme hachée et chiffrée. Notons cependant que je m'appuie sur des solutions tierces qui peuvent collecter tes informations personnelles identifiables. Je t'invite à lire leurs politiques pour plus d'informations.",
+    "privacy.overview": "Pas un tracker, pas une pub, elle est pas belle la vie !? je n'utilise pas de cookies ou de trackers et n'enregistre pas tes informations personnelles identifiables, sauf si tu donnes ton avis ou si tu t'abonnes aux nouvelles. Dans ce cas, les données personnelles me sont transmises volontairement, sont stockées automatiquement et ne sont utilisées que dans le but d'apprécier ton intérêt, de traiter ta demande et de prendre contact avec toi. Je sauvegarde également ton adresse IP temporairement lorsque tu me contactes, t'abonnes ou te désabonnes des nouvelles. Cela afin de bloquer automatiquement les demandes répétitives, et je l'enregistre sous forme hachée et chiffrée. Notons cependant que je m'appuie sur des solutions tierces qui peuvent collecter tes informations personnelles identifiables. Je t'invite à lire leurs politiques pour plus d'informations.",
     "privacy.third-parties.title": " Tiers intégrés :",
     "privacy.third-parties.policy": "Lire la politique de confidentialité",
     "privacy.third-parties.host": "Ce site web est hébergé chez",
-    "privacy.third-parties.permdb": "Tes applaudissements et ton adresse IP anonymisée sont stockés chez",
     "privacy.third-parties.tmpdb": "Ton adresse IP anonymisée est temporairement stockés chez",
     "privacy.third-parties.emails": "Les couriels sont traités par",
     "privacy.third-parties.messages": "Les messages sont stoqués chez",
@@ -76,9 +75,6 @@
     "last.tooltip": "La toute première photo",
     "previous.tooltip": "Précédent",
     "loading.tooltip": "Chargement",
-    "applause.me": "Applaudir cette",
-    "applause.photo.tooltip": "{{applause.me}} photographie !",
-    "applause.story.tooltip": "{{applause.me}} aventure !",
     "applause.feedback.pass": "Merci de tes applaudissements ! 😊",
     "applause.feedback.fail": "Arf, quelque chose à mal tourné ! \uD83D\uDE15 Essaies à nouveau plus tard.",
     "applause.feedback.fail.429": "Désolé, c'est trop d'amour pour un seul homme ! 😱 Essaies plus tard.",
