--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -21,7 +21,9 @@
     "wait-minute": "Wait a minute",
     "thanks": "Thanks!",
     "newsletter": "Follow My Journey",
-    "newsletter.notice": "I sent out an email no more than four times a year. You can unsubscribe any time.",
+    "newsletter.what": "Personal notes related to backcountry.",
+    "newsletter.when": "When new content is published, not often.",
+    "newsletter.trash": "You can unsubscribe any time.",
     "subscribe": "Subscribe",
     "unsubscribe": "Unsubscribe",
     "support": "Support",
