--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -21,7 +21,9 @@
     "wait-minute": "Odota hetki",
     "thanks": "Kiitos!",
     "newsletter": "Seuraa matkaani",
-    "newsletter.notice": "Lähetin sähköpostia enintään neljä kertaa vuodessa. Voit peruuttaa tilauksen milloin tahansa.",
+    "newsletter.what": "henkilökohtaisia muistiinpanoja ulkoilmasta.",
+    "newsletter.when": "Kun uutta sisältöä on saatavilla, ei usein.",
+    "newsletter.trash": "Voit peruuttaa tilauksen milloin tahansa.",
     "subscribe": "Tilaa",
     "unsubscribe": "Peruuttaa tilauksen",
     "support": "Tuki",
