--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -21,7 +21,9 @@
     "wait-minute": "Minute bonhomme",
     "thanks": "Merci !",
     "newsletter": "Des Nouvelles !",
-    "newsletter.notice": "Je n'envoie pas plus de quatre couriels par an. Tu peux te désabonner à tout moment.",
+    "newsletter.what": "Notes personnelles liées à la nature.",
+    "newsletter.when": "Quand y'a du nouveau contenu, pas souvent.",
+    "newsletter.trash": "Tu peux te désinscrire à tout moment.",
     "subscribe": "S'abonner",
     "unsubscribe": "Se désabonner",
     "support": "Me soutenir",
