Simplify social network list + translation

--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -26,6 +26,7 @@
     "newsletter.trash": "Voit peruuttaa tilauksen milloin tahansa.",
     "subscribe": "Tilaa",
     "unsubscribe": "Peruuttaa tilauksen",
+    "rss-feed": "RSS-syöte",
     "support": "Tuki",
     "support.why": "Pidätkö verkkosivustostani? Joten jaa se rohkeasti ystävillesi! Myös tukesi on erittäin arvostettua ja motivoi minua jatkamaan yhä useamman ja laadukkaamman sisällön jakamista. Lahjoituksesi auttaisi minua maksamaan verkkotunnuksen ja luovuuttani vahvistavan kahvin. Lahjoitusalusta on Ko-fi, joka on suunniteltu tukemaan taiteilijoita kertalahjoituksilla. Vähimmäissumma on espresson arvoinen: 3€. Maksun hoitaa ja turvaa PayPal. Voit käyttää suoraan PayPal-linkkiäni.",
     "copyright.title": "Tekijänoikeus",
