--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -26,6 +26,7 @@
     "newsletter.trash": "You can unsubscribe any time.",
     "subscribe": "Subscribe",
     "unsubscribe": "Unsubscribe",
+    "rss-feed": "RSS Feed",
     "support": "Support",
     "support.why": "Do you like my website? So feel free to share it to your friends! Also, your support is highly appreciated and motivates me to continue sharing more and higher quality content. Your donation would help me to pay the domain name and the coffee amplifying my creativity. The donation platform is Ko-fi, which is designed to support artists with one-off donations. The minimum amount is worth an espresso: 3€. The payment is handled and secured by PayPal. You could use my PayPal link directly.",
     "copyright.title": "Copyright",
