Do not support me! Donate to NGOs

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -27,8 +27,6 @@
     "subscribe": "Subscribe",
     "unsubscribe": "Unsubscribe",
     "rss-feed": "RSS Feed",
-    "support": "Support",
-    "support.why": "Do you like my website? So feel free to share it to your friends! Also, your support is highly appreciated and motivates me to continue sharing more and higher quality content. Your donation would help me to pay the domain name and the coffee amplifying my creativity. The donation platform is Ko-fi, which is designed to support artists with one-off donations. The minimum amount is worth an espresso: 3€. The payment is handled and secured by PayPal. You could use my PayPal link directly.",
     "copyright.title": "Copyright",
     "copyright.content": "The content is licensed under",
     "copyright.source": "The source code is licensed under",
@@ -65,7 +63,7 @@
     "visitors-book.what": "Those are reactions shared by visitors:",
     "visitors-book.involve.title": "Share Your Reaction",
     "visitors-book.involve": "Share yours",
-    "visitors-book.label": "In one or few words, how is your visit here? What is your impression on the photographies and stories?",
+    "visitors-book.label": "In one or few words, how is your visit here? What is your impression on the photos and stories?",
     "load-more": "Load more",
     "select": "Select",
     "search": "Search",
