--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -6,7 +6,7 @@
     "about.me": "Yo, c'est Clément. Je prends des photos de la nature sauvage et des notes de mes aventures. Je me suis retrouvé au milieu de nulle part, à lutter contre les éléments et à tester ma résilience. J'ai fait plus de 40 000 km en auto-stop et passé des centaines de jours à travers les déserts, les routes, les forêts tropicales, les villages, les modes de vie. Considères-moi comme un aventurier, un ingénieur, un explorateur de la nature sauvage et de la nature humaine. Mais je ne suis pas un surdoué et tu peux en faire autant, même mieux, chasses tes rêves ! Nous avons tous besoin d'un but. Le mien est de vivre mes plus grands rêves le plus simplement possible, et de les partager. Dans ma vie sédentaire, j'ai des projets techniques. J'ai réalisé ce site web de zéro. Bonne visite dans mon jardin numérique !",
     "about.pledge": "La photographie est mon outil d'exploration en vue d'élargir notre horizon vers des contrées éloignées. Je prouve avec des photos que les plus belles choses sont naturelles. Mais mes photos ne gardent pas la neige sur les sommets, les forêts primaires, la vie indigène, les rivières cristallines, la pureté des les lacs de montagne. C'est à nous de penser et d'agir durablement pour que la beauté soit au-delà de tout et la nature perpétuelle.",
     "contact.title": "À propos de toi",
-    "contact.why": "Fais-moi part de tes réactions, partages tes réflexions et tes projets, dis-m'en plus sur toi.",
+    "contact.why": "Fais-moi part de tes réactions, partage tes réflexions et tes projets, dis-m'en plus sur toi.",
     "name": "Nom :",
     "email": "Couriel :",
     "message": "Message :",
@@ -61,7 +61,7 @@
     "social-networks": "Réseaux sociaux",
     "visitors-book": "Livre d'or",
     "visitors-book.what": "Quelques réactions partagées par les visiteurs :",
-    "visitors-book.involve.title": "Partages ta réaction",
+    "visitors-book.involve.title": "Partage ta réaction",
     "visitors-book.involve": "Et toi ?",
     "visitors-book.label": "En un ou quelques mots, comment trouves-tu ta visite ici ? Quelle est ton impression sur les photos et aventures ?",
     "load-more": "Charger plus",
@@ -77,8 +77,8 @@
     "previous.tooltip": "Précédent",
     "loading.tooltip": "Chargement",
     "applause.feedback.pass": "Merci de tes applaudissements ! 😊",
-    "applause.feedback.fail": "Arf, quelque chose à mal tourné ! \uD83D\uDE15 Essaies à nouveau plus tard.",
-    "applause.feedback.fail.429": "Désolé, c'est trop d'amour pour un seul homme ! 😱 Essaies plus tard.",
+    "applause.feedback.fail": "Arf, quelque chose à mal tourné ! \uD83D\uDE15 Essaie à nouveau plus tard.",
+    "applause.feedback.fail.429": "Désolé, c'est trop d'amour pour un seul homme ! 😱 Essaie plus tard.",
     "no-result-try-sth-else": "Pas de bol, aucun résultat... essaye autre chose.",
     "back-to-photo.tooltip": "revenir à la photographie ou à l'aventure",
     "not-found.message": "Bah, t'es perdus ?",
@@ -124,7 +124,7 @@
     "map.stats.chart.dist.tooltip": "{{distance}} :",
     "map.control.play-autopilot": "Mode pilote automatique",
     "map.control.pause-autopilot": "Pause le pilote automatique",
-    "map.control.loading-autopilot": "Acquisition de données... Cliques pour te promener",
+    "map.control.loading-autopilot": "Acquisition de données... Clique pour te promener",
     "map.control.rewind-autopilot": "Retour au point de départ",
     "map.control.faster": "Aller plus vite",
     "map.control.slower": "Aller plus lentement",
